# rust-bakeit

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: main.rs
