[package]
name = "bakeit"
version = "0.1.0"
authors = ["Stavros Korokithakis <stavros@korokithakis.net>"]

[dependencies]
curl="0.3.0"
docopt = "0.6"
rustc-serialize = "0.3"
rust-ini = "0.9.5"
webbrowser = "0.1.3"

[dependencies.url]
git = "https://github.com/servo/rust-url"
features = ["query_encoding"]
