[package]
name = "bakeit"
version = "0.1.2-pre"
authors = ["Stavros Korokithakis <hi@stavros.io>"]
description = "BakeIt is a command line utility for Pastery, the best pastebin in the world."
repository = "https://github.com/skorokithakis/rust-bakeit"
homepage = "https://www.pastery.net/"
license = "MIT"

[dependencies]
clipboard = { git = "https://github.com/skorokithakis/clipboard" }
curl="*"
dirs = "*"
docopt = "1"
rustc-serialize = "*"
rust-ini = "*"
serde = { version = "1", features = ["derive"] }
url = "*"
webbrowser = "*"
